<resources>
    <string name="app_name">AstroExperts</string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_now_consult_to_your_favourite_astrologers">Now consult to your favourite Astrologers</string>
    <string name="lbl_share_your_details">Share your details</string>
    <string name="toast_server_error">Server error</string>
    <string name="toast_no_internet">No internet</string>
    <string name="lbl_weekly_updates">Weekly Updates</string>
    <string name="lbl_about_astrology">Support</string>
    <string name="lbl_help_and_support">Help &amp; Support</string>
    <string name="lbl_how_it_works">Terms &amp; Condition</string>
    <string name="lbl_faqs">FAQ\'s</string>
    <string name="lbl_contact_us">Contact Us</string>
    <string name="lbl_what_can_i_ask">Settings</string>
    <string name="lbl_profile">Profile</string>
    <string name="lbl_share_with_friend_and_family">Share With Friends and Family</string>
    <string name="lbl_rate_astrology">Chat</string>
    <string name="testimonials">Journey</string>
    <string name="lbl_privacy_policy">Privacy Policy</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_video">Video</string>
    <string name="lbl_read">Read</string>
    <string name="lbl_account">Account</string>
    <string name="lbl_magical_remedies">MAGICAL REMEDIES</string>
    <string name="lbl_view_all">VIEW ALL</string>
    <string name="lbl_our_experts">OUR EXPERTS</string>
    <string name="lbl_blogs">Blogs</string>
    <string name="err_mobile_no_invalid">Invalid mobile number.</string>
    <string name="lbl_mobile_number">Mobile Number</string>
    <string name="lbl_full_name">Full name</string>
    <string name="err_username_empty">Name required</string>
    <string name="lbl_notification">Notifications</string>
    <string name="lbl_oops">Oops!</string>
    <string name="lbl_currently_there_are_no_new_notifications_for_you">Currently, there are no new notifications for you</string>
    <string name="please_type_the_verification_code_sent_to">Please enter OTP sent to</string>
    <string name="verification_code">Verification Code</string>
    <string name="show_error">SHOW ERROR</string>
    <string name="show_success">SHOW Success</string>
    <string name="lbl_submit">Submit</string>
    <string name="lbl_about">About</string>
    <string name="lbl_did_not_get_the_code_resend">Did not get the Code?</string>
    <string name="lbl_resend_code">Resend OTP</string>
    <string name="lbl_no_data_available">No data available</string>
    <string name="lbl_you_sure_you_want_to_logout">You sure, you want to logout?</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_share_blog">Share Blog</string>
    <string name="lbl_app_link">https://play.google.com/store/apps/details?id=%s</string>
    <string name="lbl_search_by_name_location">Search</string>
    <string name="lbl_rating">Rating</string>
    <string name="lbl_all_ratings">All Ratings</string>
    <string name="lbl_3_stars_and_above">3 stars and above</string>
    <string name="lbl_only_5_stars">Only 5 Stars</string>
    <string name="lbl_pricing">Pricing</string>
    <string name="lbl_astrologer">Astrologers</string>
    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
    <string name="checkin">Checkin</string>
    <string name="ANDROID_CHANNEL_ID">com.netway.phone.advice.Astrologer</string>
    <string name="About_Astroyogi">About Astroyogi</string>
    <string name="About_Us">About_Us_Screen</string>
    <string name="AllReviews">All Reviews</string>
    <string name="All_Skils">All Skils</string>
    <string name="All_Timing">SHOW ALL TIMINGS</string>
    <string name="AlredaySignUp">Already signed up?</string>
    <string name="AmountDedected">Call charges deducted</string>
    <string name="AmountRecharg">Amount credited</string>
    <string name="App_Rating_Ask_me_later_click">App_Rating_Ask_me_later_click</string>
    <string name="App_Rating_Ratenow_click">App_Rating_Ratenow_click</string>
    <string name="App_Rating_Skip">App_Rating_Skip</string>
    <string name="ApptentiveAppKey">ANDROID-ASTROYOGI-d9fe78eb0032</string>
    <string name="ApptentiveAppSignature">740ee1689317a457765c62df4d2195d0</string>
    <string name="April">Apr</string>
    <string name="AskMeLater">Ask me later</string>
    <string name="AstroBusyDialog">Astrologer_Busy_Dialog</string>
    <string name="AstroCallNowDialog">Astrologer_Call_Now_Dialog</string>
    <string name="AstroList">Astrologer_List</string>
    <string name="AstroProfile">Astrologer_Profile</string>
    <string name="AstroProfilePopup">AstroProfilePopup</string>
    <string name="AstrologerAstroCategoryPopup">AstrologerAstroCategoryPopup</string>
    <string name="AstrologerAstroCategory_Banner">AstrologerAstroCategory_Banner</string>
    <string name="AstrologerBusy">The astrologer is busy. Please choose another astrologer.</string>
    <string name="AstrologerList">Astrologers</string>
    <string name="AstrologerOffline">The astrologer is offline. Please choose another astrologer.</string>
    <string name="AstrologerProfile_Banner">AstrologerProfile_Banner</string>
    <string name="AstrologersList_Call_Now_Astrologers_Button">AstroList_CallButton</string>
    <string name="AstrologersProfile_Call_Now_Astrologers_Button">AstroProfile_CallButton</string>
    <string name="AstrologersbyLocation">Astrologers by Location</string>
    <string name="Astroyogi">Astroyogi</string>
    <string name="Astroyogi_com">Astroyogi.com</string>
    <string name="August">Aug</string>
    <string name="Auto_File_Click">Auto_File_Click</string>
    <string name="Auto_File_SignUp_Success">Auto_File_SignUp_Success</string>
    <string name="AvailPointDialog">AvailPointDialog</string>
    <string name="Backtomain">Back</string>
    <string name="Be_Humble">( Please be humble &amp; polite while posting a review. Your feedback is most welcome and I would be more than happy to work on it. )</string>
    <string name="Best_Price">we find the best prices and\10offers for you</string>
    <string name="Better_Consultation">Better consultation</string>
    <string name="BlogArticlePopup">BlogArticlePopup</string>
    <string name="BlogDescription">Article_Description_Screen</string>
    <string name="Blog_Discription">Blog_Discription</string>
    <string name="Busy_Astrologer">The astrologer you requested is busy on another call. Please try after some time.</string>
    <string name="CANCEL">Cancel</string>
    <string name="CallErrorMessageDialog">Astrologer_Call_Error_Message</string>
    <string name="CallHistory">User_Call_History_Screen</string>
    <string name="CallRechargeHistory">Call_And_Recharge_History_Screen</string>
    <string name="CallTo">Do you want to call now</string>
    <string name="Career">Carrer</string>
    <string name="ChangeMobileNumber">Update Mobile Number</string>
    <string name="ChangeNumber">Entered an incorrect number?</string>
    <string name="ChangePassword">Change_Password_Dialog</string>
    <string name="Check_Email">Check your Email</string>
    <string name="ChooseAvailabelPack">Choose from the available recharge packs.</string>
    <string name="Click_CheckOut">Click_CheckOut</string>
    <string name="ClosinBalance">Closing balance</string>
    <string name="Closing_balance">CHARGES</string>
    <string name="ConsultationCharges">Consultation Charges</string>
    <string name="ContactUs">Contact Us</string>
    <string name="Contact_us">Contact_us_Screen</string>
    <string name="CreateTtaAppUser">/api/TtaApp/CreateTtaAppUser</string>
    <string name="Create_Account_Click">Create_Account_Click</string>
    <string name="DailyPushNotification">DailyPushNotification</string>
    <string name="December">Dec</string>
    <string name="Detail">CONSULTED</string>
    <string name="Dot">-</string>
    <string name="Duration">Call Duration</string>
    <string name="EditProfile">User_EditProfile_Screen</string>
    <string name="EmailId">EmailId</string>
    <string name="EmailIdVerefication">Please enter a valid email id</string>
    <string name="Emailfirst">customercare@astroyogi.com</string>
    <string name="EnterLocation">Search here</string>
    <string name="EnterManually">ENTER MANUALLY</string>
    <string name="Enter_OTP">(Enter the 6-digit OTP code we send you below in case we fail to detect it automatically)</string>
    <string name="Experiance">Experience</string>
    <string name="Faq">Faq_Screen</string>
    <string name="February">Feb</string>
    <string name="Filter">Filters</string>
    <string name="FilterActivity">Filter_Screen</string>
    <string name="Filter_click_from_AstrologerList">Filter_click_from_AstrologerList</string>
    <string name="FinancesInvestment">Money and Investment</string>
    <string name="First_Time_Paid_Fail">First_Time_Paid_Fail</string>
    <string name="For_securely_payment_detail">For sharing the payment details securely.</string>
    <string name="ForceUpdate">For technical reasons, we need to ask you to update the app to continue using it Sorry about that.</string>
    <string name="FragmentOne_tile_categories">FragmentOne_tile_categories</string>
    <string name="Fragmenteight_tile_categories">Fragmenteight_tile_categories</string>
    <string name="Fragmentfive_tile_categories">Fragmentfive_tile_categories</string>
    <string name="Fragmentfour_tile_categories">Fragmentfour_tile_categories</string>
    <string name="Fragmentseven_tile_categories">Fragmentseven_tile_categories</string>
    <string name="Fragmentsix_tile_categories">Fragmentsix_tile_categories</string>
    <string name="Fragmentthree_tile_categories">Fragmentthree_tile_categories</string>
    <string name="Fragmenttwo_tile_categories">Fragmenttwo_tile_categories</string>
    <string name="GetStartNow">Get Started Now</string>
    <string name="GettingFirstName">Getting_FirstName_Screen</string>
    <string name="HeadingFirstName">Welcome back to Astroyogi</string>
    <string name="Health">Health</string>
    <string name="Help">FAQs</string>
    <string name="Help_and_Support">Help and Support</string>
    <string name="History">Account History</string>
    <string name="Home">Home</string>
    <string name="HomeFragment_Searchclick">HomeFragment_Searchclick</string>
    <string name="HomeFragment_tile_categories">HomeFragment_tile_categories</string>
    <string name="HomeFragment_tile_categories_Seven">HomeFragment_tile_categories_Seven</string>
    <string name="HomeFragment_tile_categories_Six">HomeFragment_tile_categories_Six</string>
    <string name="HomeFragment_tile_categories_eight">HomeFragment_tile_categories_eight</string>
    <string name="HomeFragment_tile_categories_five">HomeFragment_tile_categories_five</string>
    <string name="HomeFragment_tile_categories_four">HomeFragment_tile_categories_four</string>
    <string name="HomeFragment_tile_categories_nine">HomeFragment_tile_categories_nine</string>
    <string name="HomeFragment_tile_categories_one">HomeFragment_tile_categories_one</string>
    <string name="HomeFragment_tile_categories_ten">HomeFragment_tile_categories_ten</string>
    <string name="HomeFragment_tile_categories_three">HomeFragment_tile_categories_three</string>
    <string name="HomeFragment_tile_categories_two">HomeFragment_tile_categories_two</string>
    <string name="TnC">I accept Terms of use &amp; privacy policy</string>
</resources>