<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".ui.splash.SplashActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/close_screen" />

        <com.ksbm_astroexpert.view.NormalTextView
            android:id="@+id/txtSignUp"
            style="@style/signupTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/lbl_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.ksbm_astroexpert.view.BoldTextView
            android:id="@+id/txtLogin"
            style="@style/loginPageTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="120dp"
            android:text="@string/lbl_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.ksbm_astroexpert.view.NormalTextView
            android:id="@+id/txtLoginMsg"
            style="@style/loginPageMsgTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_now_consult_to_your_favourite_astrologers"
            app:layout_constraintStart_toStartOf="@+id/txtLogin"
            app:layout_constraintTop_toBottomOf="@+id/txtLogin" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:background="@color/white"
            android:paddingStart="30dp"
            android:paddingTop="50dp"
            android:paddingEnd="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLoginMsg">


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_mobile_number"
                android:includeFontPadding="true"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.ksbm_astroexpert.view.NormalTextView
                android:id="@+id/txtErrMobile"
                style="@style/loginErrorTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/err_mobile_no_invalid"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtMobileNumber"
                tools:visibility="visible" />



            <LinearLayout
                android:id="@+id/tncll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/txtErrMobile"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/tnccheck"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/txtcheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TnC"
                    android:layout_marginLeft="5dp"
                    tools:visibility="visible" />


            </LinearLayout>




            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                style="@style/loginButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/lbl_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tncll" />

            <ProgressBar
                android:id="@+id/loaderSignin"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:indeterminateTint="@color/viewAllBtn"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tncll"
                tools:visibility="visible" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>