<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="10dp">

        <com.ksbm_astroexpert.view.NormalTextView
            android:id="@+id/txtRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_rating"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvRating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="5dp"
            app:cardElevation="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtRating">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <com.ksbm_astroexpert.view.NormalTextView
                    android:id="@+id/txtAllRating"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/lbl_all_ratings"
                    android:textSize="14sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/dividerItem" />

                <com.ksbm_astroexpert.view.NormalTextView
                    android:id="@+id/txt3Plus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/lbl_3_stars_and_above"
                    android:textSize="14sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/dividerItem" />

                <com.ksbm_astroexpert.view.NormalTextView
                    android:id="@+id/txt5Start"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/lbl_only_5_stars"
                    android:textSize="14sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <com.ksbm_astroexpert.view.NormalTextView
            android:id="@+id/txtPricing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/lbl_pricing"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvRating" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvPricing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="5dp"
            app:cardElevation="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPricing">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:padding="5dp"
                android:layout_height="wrap_content">

                <com.innovattic.rangeseekbar.RangeSeekBar
                    android:id="@+id/rangeSeekBar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:rsb_max="5000"
                    app:rsb_maxThumbDrawable="@drawable/range_thumb_drawable"
                    app:rsb_minRange="0"
                    app:rsb_minThumbDrawable="@drawable/range_thumb_drawable"
                    app:rsb_trackColor="@color/dividerItem"
                    app:rsb_trackSelectedColor="@color/viewAllBtn"
                    app:rsb_trackSelectedThickness="5dp"
                    app:rsb_trackThickness="2dp" />

                <com.ksbm_astroexpert.view.NormalTextView
                    android:id="@+id/txtMinPrice"
                    app:layout_constraintTop_toBottomOf="@+id/rangeSeekBar"
                    android:layout_width="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textSize="12sp"
                    android:layout_marginStart="16dp"
                    android:text="0"
                    android:layout_height="wrap_content" />

                <com.ksbm_astroexpert.view.NormalTextView
                    android:id="@+id/txtMaxPrice"
                    app:layout_constraintTop_toBottomOf="@+id/rangeSeekBar"
                    android:layout_width="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textSize="12sp"
                    android:layout_marginEnd="16dp"
                    android:text="5000"
                    android:layout_height="wrap_content" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFilter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/lbl_submit"
            app:backgroundTint="@color/viewAllBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvPricing" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>